objects/Obj1__c.object
<CustomObject>
    <fields>
        <fullName>Account_MD__c</fullName>
        <label>Account MD</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Obj1</relationshipLabel>
        <relationshipName>Obj1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Not Good&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Obj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>